# ugit_diy

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pyrightconfig.jsonc  pytest.ini  ruff.toml
notes/: argparse.md  cli.md  cli_construction.md  git.md  logging.md  pytest.md
src/ugit_diy/: __init__.py  __main__.py  cli.py  constants.py  logging_setup.py  paths.py  repo.py
src/ugit_diy/config/: logging.json
tests/: conftest.py  test_cli.py  test_logging_setup.py  test_paths.py  test_repo.py
